manifests/local/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  # Everything under template is what you would usually put in your pod.yaml file
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: docker.io/library/server:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        volumeMounts:
          - name: models
            mountPath: /models
      volumes:
        - name: models
          persistentVolumeClaim:
            claimName: models
