manifests/local/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        # Modified
        image: docker.io/library/client
        # Implementation detail: This is necessary for local clusters.
        #                        Not specifying this will result in the
        #                        kubelet trying to pull indefinitely and
        #                        not launching the pods successfully.
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            memory: 250M
        ports:
          # Note: This is the port on the container (what is exposed by
          #       the Python application)
          #       Here, this is the streamlit application
          - containerPort: 8501
        volumeMounts:
          - name: frontend
            mountPath: /data
            subPath: data
      volumes:
        - name: frontend
          persistentVolumeClaim:
            claimName: pvc-frontend
